----------------------------------------------------------------------
 OmegaT 2.1.3 update 1
----------------------------------------------------------------------
  2 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.1.3 update 1 vs. 2.1.3

  Implemented requests:

   - TBX glossary format
  http://sourceforge.net/support/tracker.php?aid=1756560

   - File filter for WiX localisation files (.wxl)

  Bug fixes:

  - Project Files window doesn't remember its position
  http://sourceforge.net/support/tracker.php?aid=2893165

  - Windows only: OS allowed to rename a project directory while in use
  http://sourceforge.net/support/tracker.php?aid=1956239


----------------------------------------------------------------------
 OmegaT 2.1.3 
----------------------------------------------------------------------
  6 Enhancements
  4 Bugfixes
----------------------------------------------------------------------
2.1.3 vs. 2.1.2

  Implemented requests:

   - CSV glossary format
  http://sourceforge.net/support/tracker.php?aid=2952761

   - File filter for DTD and Mozilla .properties files
  http://sourceforge.net/support/tracker.php?aid=1848169

  Other enhancements:
  
  - Windows Resources (RC) file filter

  - Add support for multiple translation engines

  - POST method is used for Google Translate, to allow longer segments 
(still limited at 5000 characters)
  
  - Add support for Belazar (http://belsoft.tut.by/belazar/)

  Bug fixes:

  - Help & Manual: Some translatable text was not available

  - TransTip doesn't highlight words in uppercase
  http://sourceforge.net/support/tracker.php?aid=2953462

  - Line spacing wasn't always fixed in the Editor

  - Missings paragraphs after an out of turn tag
  http://sourceforge.net/support/tracker.php?aid=2954272


----------------------------------------------------------------------
 OmegaT 2.1.2 
----------------------------------------------------------------------